# ComputerGraphicsStudies

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: cmake-x64-Debug.yml  msvc.yml
Application/: CMakeLists.txt  Main.cpp
Core/: CMakeLists.txt  Concepts.h  Image.ixx  Math-Matrix.ixx  Math-Vector.ixx  PchCommon.cpp  PchCommon.h  Window.ixx
Renderer/: CMakeLists.txt  Main.cpp  Renderer.ixx  RendererMain.cpp  RendererMain.h
